<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Filer</string>
    <string name="app_version">v1.1.0</string>
    <string name="shortcut_app_name">Filer Shortcut</string>
    <string name="app_description">Filer - File Manager</string>
    <string name="app_about">\n<b>Original source by</b>\n<u>M. Wiggins</u>\n\n<b>Source code available</b>\n<u>http://github.com/lithium/filer</u>\n\nPublished by Hlidskialf Software\n\nNo warranty of any kind provided.</string>

    <!-- phrases used in dialogs or toast -->
    <string name="no_storage">No storage found.</string>
    <string name="toast_shortcut_hint">Longclick to create a shortcut</string>

    <!-- nouns -->
    <string name="icon">Icon</string>
    <string name="extension">Extension</string>
    <string name="mimetype">Mime-type</string>
    <string name="action">Action</string>
    

    <!-- actions -->
    <string name="yank_buffer">Selection</string>
    <string name="yank">Select</string>
    <string name="unyank">Un-Select</string>
    <string name="open_as">Open as...</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="info">Properties</string>
    <string name="yank_all">Select all</string>
    <string name="unyank_all">Unselect all</string>
    <string name="copy_here">Copy</string>
    <string name="move_here">Move</string>
    <string name="new_directory">New directory</string>
    <string name="preferences">Preferences</string>
    <string name="help">Help</string>
    <string name="delete_all">Delete</string>
    <string name="sort_by">Sort by</string>
    <string name="new_mime">Add New Type</string>
    <string name="edit_mime">Edit Type</string>
    <string name="choose_icon">Choose an icon</string>

    <!-- preferences -->
    <string name="pref_cat_filer">Filer Preferences</string>
    <string name="pref_home_path">Home directory</string>
    <string name="pref_home_path_summary">Default starting directory</string>
    <string name="pref_recursive_delete">Recursive delete</string>
    <string name="pref_recursive_delete_summary">Delete non-empty directories</string>
    <string name="pref_back_exits">Back button exits </string>
    <string name="pref_back_exits_summary">No history support, pressing back exits.</string>

    <string name="pref_cat_files">File Display</string>
    <string name="pref_hide_dot">Hide dot files</string>
    <string name="pref_hide_dot_summary">Hide files that start with a period</string>
    <string name="pref_browse_root">Show device files</string>
    <string name="pref_browse_root_summary">Show files not on removable media</string>

    <string name="pref_cat_about">About</string>
    <string name="pref_about">About Filer</string>
    <string name="pref_about_summary">Version info and credits</string>

    <string name="pref_cat_mime">Mimetype Preferences</string>
    <string name="pref_mime">File types</string>
    <string name="pref_mime_summary">Configure file and mimetype associations</string>

    <!-- dialogs -->
    <string name="dialog_yank_buffer_title">Selected Files</string>
    <string name="dialog_copy_buffer_title">Copy Selected Files?</string>
    <string name="dialog_move_buffer_title">Move Selected Files?</string>
    <string name="dialog_delete_buffer_title">Delete Selected Files?</string>

    <string name="moving_files">Moving files...</string>
    <string name="copying_files">Copying files...</string>
    <string name="deleting_files">Deleting files...</string>

    <string name="dialog_mkdir_title">Make new directory</string>
    <string name="dialog_mkdir_splash">Name of the new directory</string>
    <string name="dialog_mkdir_hint">New Directory</string>

    <string name="dialog_rename_title">Rename file</string>
    <string name="dialog_rename_splash">New name of the file</string>
   
    <string name="create_shortcut_title">Create shortcut</string>
    <string name="create_shortcut_splash">Name for the new shortcut</string>



    <string name="file_info_title">Properties of %s</string>
    <string name="file_info_path">File path:</string>
    <string name="file_info_type">File type:</string>
    <string name="file_info_mtime">Last modified:</string>
    <string name="file_info_size">Size:</string>



    <!-- messages -->
    <string name="activity_not_found">No activity found</string>
    <string name="directory_created">%s: directory created</string>
    <string name="file_renamed">%s renamed to %s</string>
    <string name="file_deleted">%s deleted</string>
    <string name="copying_file">%s\n=>\n%s</string>

    <string name="file_exists">%s: file already exists</string>
    <string name="file_not_found">%s: file not found</string>
    <string name="directory_not_empty">%s: directory not empty</string>



    <!-- help -->
    <string name="help_title">Filer Help</string>
    <string name="help_body"><![CDATA[
      <h2>Table of Contents</h2>
        <ol>
          <li><a href=\"#about\">What Is Filer?</a></li>
          <li><a href=\"#faq\">F.A.Q.s</a></li>
          <li><a href=\"#tips\">Tips</a></li>
          <li><a href=\"#guide\">User Guide</a></li>
          <li><a href=\"#howto\">How-to Videos</a></li>
        </ol>
      
      <a name=\"#about\"></a><h2>1. What Is filer?</h2>
      <p>Filer is a file system interface, it's purpose is to allow you to browse and manage files stored on memory cards.</p>
      <a href=\"#howto\">How-to videos</a>

      <a name=\"faq\"></a><h2>2. F.A.Q.s</h2>
      <ol>
        <li><a href=\"#faq1\">How do I use it?</a></li>
        <li><a href=\"#faq2\">How do I select files?</a></li>
        <li><a href=\"#faq3\">What does .. mean?</a></li>
        <li><a href=\"#faq4\">How do I un-select all files?</a></li>
      </ol>
      <a name=\"faq1\"></a><h3>How do I use it?</h3>
      <p>Using filer revolves around the <a href=\"#selection\">Selection</a>.  
        <ol>
          <li>Select the files you want changed</li>
          <li>Navigate to the target directory</li>
          <li>Choose what to do using the <a href=\"#selection-bar\">Selection Bar</a></li>
          <li>Confirm the results</li>
        </ol>
      </p>
      <a name=\"faq2\"></a><h3>How do I select files?</h3>
      <p>You can select files two different ways, either by tapping the icon on the left, or Long-click on a file to bring up the context menu, choose Select. Selected files have an orange background, indicating they are currently selected.</p>
      <a name=\"faq3\"></a><h3>What does .. mean?</h3>
      <p>\"..\" is shorthand for the Parent Directory, clicking it will take you up one directory. Long-Clicking .. will jump to the directory you started in.</p>
      <a name=\"faq4\"></a><h3>How do I unselect all files?</h3>
      <p>You can clear the selection by clicking on <b>Selection</b> on the <b>Selection Bar</b> and choosing <b>Unselect All</b>.  Unselect all is also avaiable in the menu if there are files selected.</p>

      <a name=\"tips\"></a><h2>3. Tips</h2>
      <h3>Move instead of copy</h3>
      <p>Moving a file is much faster than copying a file, because a move is actually just renaming the file.  Copying files must make a byte for byte copy and is much slower.</p>
      <h3>Jump to start directory</h3>
      <p>If you Long-Click on .., it will jump to the starting directory.  Usually this is the Home Directory, or /sdcard</p>

      <a name=\"guide\"></a><h2>4. User Guide</h2>
      <a name=\"selection\"></a><h3>Selection</h3>
      <p>The <b>Selection</b> is the list of files you have currently highlighted </p>
      <a name=\"selection-bar\"></a><h3>Selection Bar</h3>
      <p>The <b>Selection Bar</b> is shown when there are files selected, it displays the 4 options you can take on the selected files:
      <img src="file:///android_asset/yankbar.jpg"> 
      <ul>
        <li><b>Selection</b> - Shows all the currently selected files</li>
        <li><b>Copy</b> - Copies the selected files into the current directory</li>
        <li><b>Move</b> - Moves the selected files into the current directory</li>
        <li><b>Delete</b> - Delete the selected files</li>
      </ul>
      </p>

      <a name=\"howto\"><h2>5. Howto Videos</h2>
      <a href=\"http://www.youtube.com/watch?v=xMeUyB-oh7Y\">Selecting Files</a><br/><br/>
      <a href=\"http://www.youtube.com/watch?v=110xEHGQqu4\">Copying Files</a><br/><br/>
      <a href=\"http://www.youtube.com/watch?v=hhGuMMFD22U\">Moving Files</a><br/><br/>
      <!--
      <a href=\"\">Deleting Files</a><br/><br/>
      <a href=\"\">Adding a File Type</a><br/>
      -->
    ]]></string>
</resources>
