<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >

  <TextView
    android:id="@+id/empty_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    />


  <LinearLayout android:id="@+id/yank_bar"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:visibility="gone"
    android:orientation="vertical"
    >
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
      <ImageButton android:id="@+id/yank_bar_buffer"
              android:layout_width="0dip" android:layout_height="wrap_content"
              android:layout_weight="1"
              android:src="@android:drawable/ic_menu_agenda"
              android:text="@string/yank_buffer" />

      <ImageButton android:id="@+id/yank_bar_copy"
              android:layout_width="0dip" android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/copy_here" 
              android:src="@android:drawable/ic_menu_share"
              />
      <ImageButton android:id="@+id/yank_bar_move"
              android:layout_width="0dip" android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/move_here" 
              android:src="@drawable/ic_menu_move"
              />
      <ImageButton android:id="@+id/yank_bar_delete"
              android:layout_width="0dip" android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/delete_all" 
              android:src="@android:drawable/ic_menu_delete"
              />
    </LinearLayout>
  </LinearLayout>

      
  <ListView
    android:id="@id/android:list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_above="@id/yank_bar"
    android:choiceMode="multipleChoice"
    android:drawSelectorOnTop="false"
    />
</RelativeLayout>

