<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <TableLayout 
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:padding="6sp"
    >

    <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
      <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/file_info_path"
        android:gravity="right"
        />
      <TextView android:id="@+id/file_info_path"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="8sp"
        android:gravity="left"
        />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
      <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/file_info_type"
        android:gravity="right"
        />
      <TextView android:id="@+id/file_info_type"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="8sp"
        android:gravity="left"
        />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
      <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/file_info_mtime"
        android:gravity="right"
        />
      <TextView android:id="@+id/file_info_mtime"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="8sp"
        android:gravity="left"
        />
    </TableRow>

    <TableRow android:layout_height="wrap_content" android:layout_width="fill_parent">
      <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/file_info_size"
        android:gravity="right"
        />
      <TextView android:id="@+id/file_info_size"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="8sp"
        android:gravity="left"
        />
    </TableRow>
    
  </TableLayout>
</ScrollView>
